@startuml WFCAD
title WFCAD
package View{
    class CanvasForm
}
Package Controller{
    class CommandHistory
    Interface ICommand
    interface IAddShapeCommand
    abstract class Command
    class AddShapeCommand
    class MoveCommand
    class ZoomCommand
    class RotateCommand
    CommandHistory o-- ICommand
    ICommand <|.. Command
    ICommand <|.. IAddShapeCommand
    Command  <|.. AddShapeCommand
    IAddShapeCommand <|.. AddShapeCommand
    Command  <|.. MoveCommand
    Command  <|.. ZoomCommand
    Command  <|.. RotateCommand
    ' Command  <|.. RemoveCommand
    ' Command  <|.. ResetCommand
    ' Command  <|.. CopyCommand
    ' Command  <|.. CutCommand
    ' Command  <|.. PasteCommand
    ' Command  <|.. CloneCommand
    ' Command  <|.. ForegroundCommand
    ' Command  <|.. BackgroundCommand
    AddShapeCommand <|.. AddRectangleCommand
    AddShapeCommand <|.. AddEllipseCommand
}
Package Model{
    class Canvas
    interface IShape
    abstract class Shape
    class Shape1D
    class Shape2D
    class Line
    class Ellipse
    class Rectangle
    Interface IFramePoint
    class FramePoint
    IShape  <|..  Shape
    Shape <|-- Shape1D
    Shape <|-- Shape2D
    Shape1D <|-- Line
    Shape2D <|-- Ellipse
    Shape2D <|-- Rectangle
    IFramePoint <|.. FramePoint
    Canvas --> IShape
    IShape --> IFramePoint

}
CanvasForm --> Canvas
CanvasForm --> CommandHistory

@enduml